# SLAE

./: .gitignore  CMakeLists.txt  README.md
sem_1/src/my_project/: SlaeBaseException.cpp  SlaeBaseException.hpp
sem_1/src/my_project/matrix/: ThreeDiagonalMatrix.cpp  ThreeDiagonalMatrix.hpp
sem_1/src/my_project/solvers/: ThreeDiagonalSolver.cpp  ThreeDiagonalSolver.hpp
sem_1/src/my_project/vectors/: Vectors.h
sem_1/tests/: test_exception.cpp  test_matrix.cpp
src/: CMakeLists.txt
src/my_project/: Defines.h  defines.h  main.cpp
src/my_project/emaxples/: DirihletPiosson.h
src/my_project/matrix/: ThreeDiagonalMatrix.hpp
src/my_project/matrix/ThreeDiagonal/: ThreeDiagonalMatrix.cpp  ThreeDiagonalMatrix.hpp
src/my_project/matrix/dense/: Densematrix.hpp
src/my_project/matrix/sparse/: CSRExeption.cpp  CSRExeption.h  CSRmatrix.h
src/my_project/matrix/utility/: EigenValues.h  Element.hpp
src/my_project/solvers/: BiCG.h  ChebyshevSimpleIteration.h  ConjugateGradient.h  GMRES.h  Gauss.h  GaussSeidel.hpp  Jacobi.hpp  SOR.hpp  SimpleIteration.hpp  SteepestGradiendDescent.h  ThreeDiagonalSolver.cpp  ThreeDiagonalSolver.hpp
src/my_project/vectors/: Norm.hpp  Vectors.h  Vectors.hpp
tests/: CMakeLists.txt  eigvals.py  test_CSR_matrix.cpp  test_GMRES.cpp  test_dense_matrix.cpp  test_eigenvalues.cpp  test_gaussseidel.cpp  test_matrix.cpp  test_norm_vector.cpp  test_notpositive.cpp  test_poisson.cpp  test_simple_iteration_solvers.cpp  test_three_diagonalmatrix.cpp  test_threediagonal.cpp
